# EE3900

Assignment-1/: main.aux  main.tex  main.toc  pyproject.toml
Assignment-1/codes/: 1.py  2  2.c  2.py  3.py  3_2_x.txt  4.py  4_6.py  5.py  5_3.py  5_6.py  5_7.py  6_1.py  6_3.py  6_complexity.py
Assignment-2/: main.tex
charger/: main.aux  main.tex
charger-report/: main.tex
charger/codes/: 1_1.py  2_3.py  2_6.py  3_10.py  3_8.py  3_9.py  4_3.py  5_3.cir  5_3.py  5_4.cir  5_4.py  5_5.py  5_final.py  butt_final.txt  final.cir  final.py  plot.py
ckt-sig/: main.aux  main.out  main.tex  main.toc
ckt-sig/codes/: 2_7.py  2_8.cir  2_8.ps  3_4.py  3_5.cir  3_5.ps  4_3.py  4_4.py  4_7.cir  tmp.py
conv-trans/: main.tex
filter/: main.aux  main.out  main.tex  main.toc
filter/codes/: 3_2_y.txt  5_8.py  6_3.py  6_4.py  6_compiled.py  7_11.py  7_12.py  7_13  7_13.c  7_comp.py
phone/: main.aux  main.tex  phone.py
pingala/: main.aux
pingala/codes/: 1.py  2_2.py  2_5.py
