[tool.poetry]
name = "assignment-1"
version = "0.1.0"
description = ""
authors = ["varenya"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
